# protobuf_example

./: CMakeLists.txt  README.md  read.cpp  readme.md  write.cpp
proto/: addressbook.proto  input_output_data.proto
